# kay-dev

./: .gitignore  Cargo.toml  README.md  rust-toolchain  scatch.rs
client/: package.json
client/crate/: Cargo.toml
client/crate/src/: main.rs
client/src/: index.html  index.js  kay-dev-client.js  kay-dev-client.wasm
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/actor/: kay_auto.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
