[package]
name = "lib"
version = "0.1.0"
authors = ["Abe <abramabradley@gmail.com>"]
edition = "2018"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
compact_macros = "*"
compact = "*"
kay = "*"

# serde = { version = "*", features = ["derive"] }
# serde_derive = "1.0"
# compact = { version = "0.2.13", features = ["serde-serialization"] }
# kay = { version = "0.5.1", features = ["serde-serialization"] }
[build-dependencies]
kay_codegen = "*"
# kay_codegen = { version = "0.3.10", features = ["serde-serialization"] }
